# PRISM-LLM

./: .gitignore  Makefile  README.md  patch_collator.py  pyproject.toml
.github/workflows/: ci.yml
configs/model/: student_tiny.yaml
configs/train/: stage1_smoke.yaml  stage2a_longer_run.yaml
docs/: benchmarking_report.md  developer_note.md  prism_llm_architecture_paper.md
scratch/: model_high_context.yaml
scripts/: benchmark_checkpoints.py  benchmark_longctx.py  benchmark_model.py  eval.py  generate.py  prepare_dataset.py  profile_vram.py  smoke_forward.py  train.py  train_kd.py
src/prism_llm/: __init__.py
src/prism_llm/data/: __init__.py  collator.py  dataset.py
src/prism_llm/distill/: hooks.py  kd_losses.py  teacher.py
src/prism_llm/eval/: __init__.py  perplexity.py
src/prism_llm/model/: __init__.py  attention_gqa.py  block.py  config.py  decoder.py  embeddings.py  mlp.py  norms.py  rope.py
src/prism_llm/model/memory/: anchor_bank.py  latent_bank.py  memory_manager.py  prime_features.py  recent_bank.py  summary_bank.py
src/prism_llm/train/: __init__.py  checkpoint.py  config.py  kd_trainer.py  optimizer.py  trainer.py
src/prism_llm/utils/: __init__.py  config_utils.py
tests/: test_attention_gqa.py  test_decoder.py  test_kd_losses.py  test_loss.py  test_memory_banks.py  test_rope.py  test_shapes.py  test_training_step.py
